Fix navbar flicker on slides screen

--- a/example/src/Components/Navbar/index.css
+++ b/example/src/Components/Navbar/index.css
@@ -1,5 +1,6 @@
 .navbar {
-  padding: calc(env(safe-area-inset-top) * 1.25) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  padding: calc(env(safe-area-inset-top) * 1.25) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left);
   min-height: calc(64px - env(safe-area-inset-top));
   background-color: rgba(254, 226, 85);
   position: sticky;
@@ -8,7 +9,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
   .back {
     position: absolute;
     left: 15px;
@@ -21,7 +21,7 @@
   }
 }
 .suspense .navbar .back {
-  animation: back-fade-in .5s ease forwards;
+  animation: back-fade-in 0.5s ease forwards;
 }
 @keyframes back-fade-in {
   from {
